# sellerhelper

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  METHODOLOGY.md  Makefile  README.md  README.ru.md  ROADMAP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
core/: __init__.py  config.py  main.py  scheduler.py
core/api/: health.py  stages.py
core/collectors/: base.py  ozon.py  wb_selenium.py  wildberries.py
core/engine/: competition.py  demand.py  discover.py  pipeline.py  stages.py
core/models/: product.py
core/storage/: db.py  models.py  repo.py
tests/: test_competition.py  test_demand.py  test_discover.py  test_ozon.py  test_pipeline.py  test_storage.py  test_trend.py  test_watchlist.py  test_wildberries.py
