[project]
name = "sellerhelper"
version = "0.0.1"
description = "Open-source AI co-founder for marketplace sellers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
    "sqlalchemy>=2.0",
    "selenium>=4.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    # Pinned so CI runs the exact linter the code was checked against; ruff's
    # default rule set expands between releases, which otherwise turns a passing
    # tree red on an unrelated push.
    "ruff==0.15.21",
]
llm = [
    "anthropic>=0.40",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# State the rule set explicitly rather than inheriting ruff's defaults, which
# change between releases. This is the historical default (pyflakes plus the
# essential pycodestyle checks) and keeps linting reproducible across versions.
select = ["E4", "E7", "E9", "F"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["core", "core.api", "core.collectors", "core.engine", "core.models", "core.storage"]

[tool.setuptools.package-data]
core = ["web/*.html"]
